Add cmdline-args util, for future compatibility.